manifests/service-keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: https
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP
