manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - keycloak.alopezpa.homelab
  rules:
    - host: keycloak.alopezpa.homelab
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak
                port:
                  number: 8443
